--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -122,6 +122,7 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+    table-layout: fixed;
 }
 pre {
     white-space: pre-line;
