Add variável de fonte roboto;

--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
 
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: #263238;
 }
