--- a/scss/home.scss
+++ b/scss/home.scss
@@ -4,6 +4,7 @@
 // font-family: 'Roboto', sans-serif;
 
 $font-quattrocento: 'Quattrocento', serif;
+$font-roboto: 'Roboto', sans-serif;
 
 $color-white: #FFFFFF;
 $color-grey-100: #F5F5F5;
@@ -21,7 +22,7 @@ $s: 8px;
 
 html,
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-roboto;
     font-size: 16px;
     color: $color-blue-grey-900;
 }
