--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Quattrocento|Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap');
 .fw-bold {
   font-weight: bold;
 }
@@ -51,9 +51,8 @@ body {
 }
 
 .cover-title {
-  font-family: "Quattrocento", serif;
-  font-size: 30px;
-  text-transform: uppercase;
+  font-family: 'Roboto Slab', serif;
+  font-size: 32px;
   color: #607D8B;
 }
 
@@ -84,11 +83,9 @@ body {
 }
 
 .section-dark .sd-title {
-  font-family: "Quattrocento", serif;
+  font-family: 'Roboto Slab', serif;
   font-size: 30px;
-  font-weight: bold;
   color: #81C784;
-  text-transform: uppercase;
   margin-bottom: 48px;
 }
 
