--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Caveat|Roboto&display=swap");
 .fw-bold {
   font-weight: bold;
 }
@@ -7,92 +7,50 @@ html,
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  color: #263238;
+  color: #FFFFFF;
+  line-height: normal;
+  background-image: url(/img/parque-tecnologico.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+}
+
+main {
+  display: table;
+  width: 100%;
 }
 
 .cover {
   text-align: center;
-  background-color: #FFF;
-  width: 100%;
-  height: 100vh;
-  display: table;
-}
-
-@media (min-width: 768px) {
-  .cover {
-    height: calc(100vh - 295px);
-  }
-}
-
-.cover-wrapper {
   vertical-align: middle;
+  height: 100vh;
   display: table-cell;
 }
 
-.cover-title {
-  font-size: 60px;
-}
-
-@media (min-width: 768px) {
-  .cover-title {
-    font-size: 144px;
-  }
-}
-
 .cover-logo {
-  margin-bottom: 32px;
-  width: 288px;
-}
-
-@media (min-width: 768px) {
-  .cover-logo {
-    width: 664px;
-  }
+  width: 300px;
 }
 
 .cover-title {
-  font-family: 'Roboto Slab', serif;
-  font-size: 32px;
-  color: #607D8B;
+  font-family: "Caveat", cursive;
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: -8px;
 }
 
-@media (max-width: 767px) {
-  .cover-subtitle {
-    font-size: 25px;
-    max-width: 320px;
-    display: inline-block;
-  }
+.cover-title b {
+  color: #AFB42B;
 }
 
-.cover-info {
-  font-size: 36px;
-  margin-top: 96px;
+.cover-subtitle {
+  font-family: "Caveat", cursive;
+  font-size: 28px;
+  margin: 40px 0;
 }
 
-.section-dark {
-  color: #FFFFFF;
-  text-align: center;
-  background-color: #263238;
-  padding: 32px 16px;
-}
-
-@media (min-width: 768px) {
-  .section-dark {
-    padding: 64px 48px;
-  }
-}
-
-.section-dark .sd-title {
-  font-family: 'Roboto Slab', serif;
-  font-size: 30px;
-  color: #81C784;
-  margin-bottom: 48px;
-}
-
-.section-dark .sd-content {
-  text-align: left;
-  line-height: 19px;
-  max-width: 700px;
+.cover-text {
+  max-width: 320px;
   display: inline-block;
-  margin-bottom: 16px;
+  margin: 8px 0;
 }
